# game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: debug.hpp  game_of_life.cpp  game_of_life.hpp  main.cpp
